tests/ui/type-alias-impl-trait/type-alias-impl-trait-tuple.next.stderr
error[E0284]: type annotations needed: cannot satisfy `Foo == _`
  --> $DIR/type-alias-impl-trait-tuple.rs:21:24
   |
LL |         Blah { my_foo: make_foo(), my_u8: 12 }
   |                        ^^^^^^^^^^ cannot satisfy `Foo == _`

error[E0284]: type annotations needed: cannot satisfy `Foo == _`
  --> $DIR/type-alias-impl-trait-tuple.rs:25:10
   |
LL |         (self.my_foo, self.my_u8, make_foo())
   |          ^^^^^^^^^^^ cannot satisfy `Foo == _`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0284`.
